# marine_fish_analysis_dashboard

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
marine_fish_analysis_dashboard/: __init__.py  dataset.py  features.py  plots.py
marine_fish_analysis_dashboard/modeling/: predict.py  train.py
notebooks/: 1-cb-initial-data-exploration.ipynb  2-cb-anova-statistical-tests.ipynb
