[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "marine_fish_analysis_dashboard"
version = "0.0.1"
description = "A comprehensive data analysis project examining marine fish populations and characteristics. This project demonstrates end-to-end data processing, from initial exploratory data analysis to interactive visualizations, incorporating statistical analysis and machine learning insights to understand patterns in marine life."
authors = [
  { name = "cyberCharl" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["marine_fish_analysis_dashboard"]
force_sort_within_sections = true
